// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleFlag does not render article flags if there are none 1`] = `
<body>
  <div />
</body>
`;

exports[`ArticleFlag renders a red article flag 1`] = `
<body>
  <div>
    <div
      class="sc-bdVaJa fXEEbM"
    >
      <div
        class="sc-bxivhb jYSxqD"
        color="red"
      />
      <div
        aria-label="Coloured Red Flag"
        class="sc-EHOje ccbsVi"
        color="red"
        data-testid="flag-Coloured Red"
      >
        coloured red
      </div>
    </div>
  </div>
</body>
`;

exports[`ArticleFlag renders an article flag 1`] = `
<body>
  <div>
    <div
      class="sc-bdVaJa fXEEbM"
    >
      <div
        class="sc-bxivhb kvBniC"
        color=""
      />
      <div
        aria-label="No Colour Flag"
        class="sc-EHOje dihMln"
        color=""
        data-testid="flag-No Colour"
      >
        no colour
      </div>
    </div>
  </div>
</body>
`;

exports[`ArticleFlag renders multiple article flags 1`] = `
<body>
  <div>
    <div
      class="sc-htoDjs OefKN"
    >
      <div
        class="sc-gzVnrw kAkVRf"
      >
        <div
          class="sc-bdVaJa fXEEbM"
        >
          <div
            class="sc-bxivhb cQXhxF"
            color="#3C81BE"
          />
          <div
            aria-label="updated Flag"
            class="sc-EHOje iWbzHt"
            color="#3C81BE"
            data-testid="flag-updated"
          >
            updated
          </div>
        </div>
      </div>
      <div
        class="sc-gzVnrw kAkVRf"
      >
        <div
          class="sc-bdVaJa fXEEbM"
        >
          <div
            class="sc-bxivhb iUYsYd"
            color="#C51D24"
          />
          <div
            aria-label="exclusive Flag"
            class="sc-EHOje jaegbj"
            color="#C51D24"
            data-testid="flag-exclusive"
          >
            exclusive
          </div>
        </div>
      </div>
      <div
        class="sc-gzVnrw kAkVRf"
      >
        <div
          class="sc-bdVaJa fXEEbM"
        >
          <div
            class="sc-bxivhb beSIBk"
            color="#E34605"
          />
          <div
            aria-label="new Flag"
            class="sc-EHOje fHTjcy"
            color="#E34605"
            data-testid="flag-new"
          >
            new
          </div>
        </div>
      </div>
      <div
        class="sc-gzVnrw kAkVRf"
      >
        <div
          class="sc-bdVaJa fXEEbM"
        >
          <div
            class="sc-bxivhb hdKGZm"
            color="#4D4D4D"
          />
          <div
            aria-label="sponsored Flag"
            class="sc-EHOje hRBZkE"
            color="#4D4D4D"
            data-testid="flag-sponsored"
          >
            sponsored
          </div>
        </div>
      </div>
      <div
        class="sc-gzVnrw kAkVRf"
      >
        <div
          class="sc-bdVaJa fXEEbM"
        >
          <div
            class="sc-bxivhb iClafV"
            color="#696969"
          />
          <div
            aria-label="long read Flag"
            class="sc-EHOje iFYRKM"
            color="#696969"
            data-testid="flag-long read"
          >
            long read
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ArticleFlag renders multiple article flags in a container 1`] = `
<body>
  <div>
    <div
      class="sc-dnqmqq gkiwaN"
    >
      <div
        class="sc-htoDjs OefKN"
      >
        <div
          class="sc-gzVnrw kAkVRf"
        >
          <div
            class="sc-bdVaJa fXEEbM"
          >
            <div
              class="sc-bxivhb cQXhxF"
              color="#3C81BE"
            />
            <div
              aria-label="updated Flag"
              class="sc-EHOje iWbzHt"
              color="#3C81BE"
              data-testid="flag-updated"
            >
              updated
            </div>
          </div>
        </div>
        <div
          class="sc-gzVnrw kAkVRf"
        >
          <div
            class="sc-bdVaJa fXEEbM"
          >
            <div
              class="sc-bxivhb iUYsYd"
              color="#C51D24"
            />
            <div
              aria-label="exclusive Flag"
              class="sc-EHOje jaegbj"
              color="#C51D24"
              data-testid="flag-exclusive"
            >
              exclusive
            </div>
          </div>
        </div>
        <div
          class="sc-gzVnrw kAkVRf"
        >
          <div
            class="sc-bdVaJa fXEEbM"
          >
            <div
              class="sc-bxivhb beSIBk"
              color="#E34605"
            />
            <div
              aria-label="new Flag"
              class="sc-EHOje fHTjcy"
              color="#E34605"
              data-testid="flag-new"
            >
              new
            </div>
          </div>
        </div>
        <div
          class="sc-gzVnrw kAkVRf"
        >
          <div
            class="sc-bdVaJa fXEEbM"
          >
            <div
              class="sc-bxivhb hdKGZm"
              color="#4D4D4D"
            />
            <div
              aria-label="sponsored Flag"
              class="sc-EHOje hRBZkE"
              color="#4D4D4D"
              data-testid="flag-sponsored"
            >
              sponsored
            </div>
          </div>
        </div>
        <div
          class="sc-gzVnrw kAkVRf"
        >
          <div
            class="sc-bdVaJa fXEEbM"
          >
            <div
              class="sc-bxivhb iClafV"
              color="#696969"
            />
            <div
              aria-label="long read Flag"
              class="sc-EHOje iFYRKM"
              color="#696969"
              data-testid="flag-long read"
            >
              long read
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ArticleFlag renders multiple article flags with override colours 1`] = `
<body>
  <div>
    <div
      class="sc-htoDjs OefKN"
    >
      <div
        class="sc-gzVnrw kAkVRf"
      >
        <div
          class="sc-bdVaJa fXEEbM"
        >
          <div
            class="sc-bxivhb dwHzqd"
            color="#FFFFFF"
          />
          <div
            aria-label="updated Flag"
            class="sc-EHOje jgkNJo"
            color="#FFFFFF"
            data-testid="flag-updated"
          >
            updated
          </div>
        </div>
      </div>
      <div
        class="sc-gzVnrw kAkVRf"
      >
        <div
          class="sc-bdVaJa fXEEbM"
        >
          <div
            class="sc-bxivhb dwHzqd"
            color="#FFFFFF"
          />
          <div
            aria-label="exclusive Flag"
            class="sc-EHOje jgkNJo"
            color="#FFFFFF"
            data-testid="flag-exclusive"
          >
            exclusive
          </div>
        </div>
      </div>
      <div
        class="sc-gzVnrw kAkVRf"
      >
        <div
          class="sc-bdVaJa fXEEbM"
        >
          <div
            class="sc-bxivhb dwHzqd"
            color="#FFFFFF"
          />
          <div
            aria-label="new Flag"
            class="sc-EHOje jgkNJo"
            color="#FFFFFF"
            data-testid="flag-new"
          >
            new
          </div>
        </div>
      </div>
      <div
        class="sc-gzVnrw kAkVRf"
      >
        <div
          class="sc-bdVaJa fXEEbM"
        >
          <div
            class="sc-bxivhb dwHzqd"
            color="#FFFFFF"
          />
          <div
            aria-label="sponsored Flag"
            class="sc-EHOje jgkNJo"
            color="#FFFFFF"
            data-testid="flag-sponsored"
          >
            sponsored
          </div>
        </div>
      </div>
      <div
        class="sc-gzVnrw kAkVRf"
      >
        <div
          class="sc-bdVaJa fXEEbM"
        >
          <div
            class="sc-bxivhb dwHzqd"
            color="#FFFFFF"
          />
          <div
            aria-label="long read Flag"
            class="sc-EHOje jgkNJo"
            color="#FFFFFF"
            data-testid="flag-long read"
          >
            long read
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ArticleFlag renders the exclusive article flag 1`] = `
<body>
  <div>
    <div
      class="sc-bdVaJa fXEEbM"
    >
      <div
        class="sc-bxivhb iUYsYd"
        color="#C51D24"
      />
      <div
        aria-label="exclusive Flag"
        class="sc-EHOje jaegbj"
        color="#C51D24"
        data-testid="flag-exclusive"
      >
        exclusive
      </div>
    </div>
  </div>
</body>
`;

exports[`ArticleFlag renders the exclusive article flag with an override colour 1`] = `
<body>
  <div>
    <div
      class="sc-bdVaJa fXEEbM"
    >
      <div
        class="sc-bxivhb dwHzqd"
        color="#FFFFFF"
      />
      <div
        aria-label="exclusive Flag"
        class="sc-EHOje jgkNJo"
        color="#FFFFFF"
        data-testid="flag-exclusive"
      >
        exclusive
      </div>
    </div>
  </div>
</body>
`;

exports[`ArticleFlag renders the long read article flag 1`] = `
<body>
  <div>
    <div
      class="sc-bdVaJa fXEEbM"
    >
      <div
        class="sc-bxivhb iClafV"
        color="#696969"
      />
      <div
        aria-label="long read Flag"
        class="sc-EHOje iFYRKM"
        color="#696969"
        data-testid="flag-long read"
      >
        long read
      </div>
    </div>
  </div>
</body>
`;

exports[`ArticleFlag renders the long read article flag with an override colour 1`] = `
<body>
  <div>
    <div
      class="sc-bdVaJa fXEEbM"
    >
      <div
        class="sc-bxivhb dwHzqd"
        color="#FFFFFF"
      />
      <div
        aria-label="long read Flag"
        class="sc-EHOje jgkNJo"
        color="#FFFFFF"
        data-testid="flag-long read"
      >
        long read
      </div>
    </div>
  </div>
</body>
`;

exports[`ArticleFlag renders the new article flag 1`] = `
<body>
  <div>
    <div
      class="sc-bdVaJa fXEEbM"
    >
      <div
        class="sc-bxivhb beSIBk"
        color="#E34605"
      />
      <div
        aria-label="new Flag"
        class="sc-EHOje fHTjcy"
        color="#E34605"
        data-testid="flag-new"
      >
        new
      </div>
    </div>
  </div>
</body>
`;

exports[`ArticleFlag renders the new article flag with an override colour 1`] = `
<body>
  <div>
    <div
      class="sc-bdVaJa fXEEbM"
    >
      <div
        class="sc-bxivhb dwHzqd"
        color="#FFFFFF"
      />
      <div
        aria-label="new Flag"
        class="sc-EHOje jgkNJo"
        color="#FFFFFF"
        data-testid="flag-new"
      >
        new
      </div>
    </div>
  </div>
</body>
`;

exports[`ArticleFlag renders the sponsored article flag 1`] = `
<body>
  <div>
    <div
      class="sc-bdVaJa fXEEbM"
    >
      <div
        class="sc-bxivhb hdKGZm"
        color="#4D4D4D"
      />
      <div
        aria-label="sponsored Flag"
        class="sc-EHOje hRBZkE"
        color="#4D4D4D"
        data-testid="flag-sponsored"
      >
        sponsored
      </div>
    </div>
  </div>
</body>
`;

exports[`ArticleFlag renders the sponsored article flag with an override colour 1`] = `
<body>
  <div>
    <div
      class="sc-bdVaJa fXEEbM"
    >
      <div
        class="sc-bxivhb dwHzqd"
        color="#FFFFFF"
      />
      <div
        aria-label="sponsored Flag"
        class="sc-EHOje jgkNJo"
        color="#FFFFFF"
        data-testid="flag-sponsored"
      >
        sponsored
      </div>
    </div>
  </div>
</body>
`;

exports[`ArticleFlag renders the updated article flag 1`] = `
<body>
  <div>
    <div
      class="sc-bdVaJa fXEEbM"
    >
      <div
        class="sc-bxivhb cQXhxF"
        color="#3C81BE"
      />
      <div
        aria-label="updated Flag"
        class="sc-EHOje iWbzHt"
        color="#3C81BE"
        data-testid="flag-updated"
      >
        updated
      </div>
    </div>
  </div>
</body>
`;

exports[`ArticleFlag renders the updated article flag with an override colour 1`] = `
<body>
  <div>
    <div
      class="sc-bdVaJa fXEEbM"
    >
      <div
        class="sc-bxivhb dwHzqd"
        color="#FFFFFF"
      />
      <div
        aria-label="updated Flag"
        class="sc-EHOje jgkNJo"
        color="#FFFFFF"
        data-testid="flag-updated"
      >
        updated
      </div>
    </div>
  </div>
</body>
`;
